# fugio-portmidi

./: CMakeLists.txt  README.md  config.h.in  fugio-manifest.json.in  manifest.json.in
api/: CMakeLists.txt
fugio-portmidi/: CMakeLists.txt
fugio-portmidi/source/: devicemidi.cpp  portmidiinputnode.cpp  portmidioutputnode.cpp  portmidioutputnode.h  portmidiplugin.cpp  portmidiplugin.h
